<resources>
    <string name="app_name">My First Application</string>
    <string name="action_settings">Settings</string>
    <string name="user_id">User Id</string>
    <string name="longitude">Longtitude</string>
    <string name="latitude">Latitude</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="hh_mm">hh/mm</string>
    <string name="submit">Submit</string>
    <string name="userid">UserID</string>
    <string name="search_query">Search Query</string>

</resources>
