<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.maria.myfirstapplication.Activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userid_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_id"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/longtitude_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="numberSigned"
            android:digits="0123456789-."/>

        <EditText
            android:id="@+id/latitude_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="numberSigned"
            android:digits="0123456789-."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/dd_mm_yyyy"
                android:inputType="date" />

            <EditText
                android:id="@+id/time_id"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hh_mm"
                android:inputType="time" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/insert_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:lineSpacingExtra="8sp"
        android:text="Submit"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="199dp" />

</android.support.constraint.ConstraintLayout>
